modified the fixed icons at the bottom of the page and also fixed the positioning of the nav on smaller screen mobile devices (test 2)

--- a/css/queries.css
+++ b/css/queries.css
@@ -233,6 +233,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    min-width: 0;
     height: 100%;
     transform: translateX(100%);
     /* This is done to take the full nav block outside of the view horizontally for the animation effect*/
@@ -413,7 +414,7 @@
   /* for the notch only */
 
   .nav ul {
-    gap: 10rem;
+    gap: 8rem;
   }
 
   .mouse-div {
@@ -426,16 +427,7 @@
 /* ********************************** */
 @media screen and (max-width: 31.25em) {
   .scroll-up {
-    bottom: 0%;
-  }
-}
-
-/* ********************************** */
-/* BELOW 380px (medium desktops) 380 / 16px = 23.75em */
-/* ********************************** */
-@media screen and (max-width: 23.75em) {
-  .nav ul {
-    margin-left: -5rem;
+    bottom: -1%;
   }
 }
 
